--- a/package.json
+++ b/package.json
@@ -1,17 +1,6 @@
 {
-  "name": "psg-theme-iheartmedia",
-  "version": "0.0.1",
-  "license": "MIT",
-  "keywords": [
-    "psg-theme"
-  ],
-  "files": [],
-  "dependencies": {}
-}
-
-{
   "author": {
-    "name": "Matthew Reynolds (matthewreynolds@iheartmedia.com)"
+    "name": "Matthew Reynolds"
   },
   "dependencies": {},
   "description": "Default theme for iHeartMedia, inc. core web framework living style guide",
@@ -20,10 +9,8 @@
   },
   "directories": {},
   "dist": {
-    "shasum": "",
-    "tarball": ""
+    "tarball": "https://github.com/iheartmediacreativestudio-dev/psg-theme-iheartmedia/tarball/master"
   },
-  "gitHead": "",
   "keywords": [],
   "license": "MIT",
   "main": "index.js",
@@ -38,7 +25,7 @@
   "readme": "",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git://github.com/iheartmediacreativestudio-dev/psg-theme-iheartmedia/git"
   },
   "scripts": {
     "test": "tape test"
